# kinematics-model-parser

./: README.md
urdf_model_generator/: CMakeLists.txt  package.xml
urdf_model_generator/models/: test_macro.xacro  ur5.urdf
urdf_model_generator/scripts/: xacro_model_generator
urdf_model_generator/src/: urdf_model_generator.cpp  urdf_parser.cpp
urdf_model_generator/urdf/: test_macro.urdf.xacro  test_robot.urdf  ur5.urdf
